--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello, World!</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello, World!</title>
+  <meta http-equiv="refresh" content="0; url=youtube.html">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+  <h1>Redirecting to YouTube...</h1>
+  <p>If you are not redirected, <a href="youtube.html">click here</a>.</p>
 </body>
 </html>
